Bug 498153 - Discord tray icon without label in system tray settings
Summary: Discord tray icon without label in system tray settings
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Tray widget (other bugs)
Version First Reported In: 6.2.5
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-01-02 13:43 UTC by Patrick Silva
Modified: 2025-01-17 21:06 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.0
Sentry Crash Report:


Attachments
screenshot (155.04 KB, image/png)
2025-01-02 13:43 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2025-01-02 13:43:52 UTC
Created attachment 177041 [details]
screenshot

STEPS TO REPRODUCE
1. open Discord
2. open system tray settings
3. click on "Entries" in the left side

OBSERVED RESULT
Discord tray icon without label as seen in the attached screenshot

EXPECTED RESULT
Discord tray icon with label

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.2.5
KDE Frameworks Version: 6.9.0
Qt Version: 6.8.1
Graphics Platform: Wayland
Comment 1 Nate Graham 2025-01-02 20:20:38 UTC
Can reproduce.
Comment 2 Konrad Materka 2025-01-02 20:24:49 UTC
The same for MS Teams. I think both are using Electron
Comment 3 Bug Janitor Service 2025-01-16 09:41:23 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5077
Comment 4 Niccolò Venerandi 2025-01-17 09:35:54 UTC
Git commit 2a619f99a0f45b2a92d8d2c3d16b037afaae47e7 by Niccolò Venerandi.
Committed on 17/01/2025 at 09:35.
Pushed by niccolove into branch 'master'.

Use tooltip title as title if no title is provided for system tray elements

Some applications, such as Discord, seem to prefer to
only set the tooltip title, and no title. This results in a
system tray entry that has the correct name when hovered,
but no name in the system tray settings. To avoid this, if
we have a tooltip title but no title, we will use the
former as the latter. In the example of Discord, this is
the only information we can use to guess the correct name.

M  +11   -0    applets/systemtray/statusnotifieritemsource.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/2a619f99a0f45b2a92d8d2c3d16b037afaae47e7
Comment 5 Niccolò Venerandi 2025-01-17 09:36:19 UTC
Git commit d0ac61eb17b09408b12a0596f4c9276b77331ecb by Niccolò Venerandi.
Committed on 17/01/2025 at 09:36.
Pushed by niccolove into branch 'Plasma/6.3'.

Use tooltip title as title if no title is provided for system tray elements

Some applications, such as Discord, seem to prefer to
only set the tooltip title, and no title. This results in a
system tray entry that has the correct name when hovered,
but no name in the system tray settings. To avoid this, if
we have a tooltip title but no title, we will use the
former as the latter. In the example of Discord, this is
the only information we can use to guess the correct name.


(cherry picked from commit 2a619f99a0f45b2a92d8d2c3d16b037afaae47e7)

Co-authored-by: Niccolò Venerandi <niccolo@venerandi.com>

M  +11   -0    applets/systemtray/statusnotifieritemsource.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/d0ac61eb17b09408b12a0596f4c9276b77331ecb